# Copyright (C) 2013 Automatak, LLC

AM_CXXFLAGS = -std=c++11

lib_LTLIBRARIES = libasyncprotocol.la

libasyncprotocol_la_SOURCES = \
	ASIOExecutor.cpp \
	ASIOSerialHelpers.cpp \
	AsyncLayerInterfaces.cpp \
	AsyncTaskBase.cpp \
	AsyncTaskContinuous.cpp \
	AsyncTaskGroup.cpp \
	AsyncTaskNonPeriodic.cpp \
	AsyncTaskPeriodic.cpp \
	AsyncTaskScheduler.cpp \
	BaseDataTypes.cpp \
	ChangeBuffer.cpp \
	CopyableBuffer.cpp \
	CRC.cpp \
	Exception.cpp \
	ExecutorPause.cpp \
	FlexibleDataObserver.cpp \
	IExecutor.cpp \
	IHandlerAsync.cpp \
	IOServiceThreadPool.cpp \
	ITimeSource.cpp \
	Log.cpp \
	LogEntryCircularBuffer.cpp \
	LogEntry.cpp \
	Loggable.cpp \
	Logger.cpp \
	LogToFile.cpp \
	LogToStdio.cpp \
	LogTypes.cpp \
	LowerLayerToPhysAdapter.cpp \
	MultiplexingDataObserver.cpp \
	PackingUnpacking.cpp \
	Parsing.cpp \
	PhysicalLayerAsyncBase.cpp \
	PhysicalLayerAsyncBaseTCP.cpp \
	PhysicalLayerAsyncSerial.cpp \
	PhysicalLayerAsyncTCPClient.cpp \
	PhysicalLayerAsyncTCPServer.cpp \
	PhysicalLayerMonitor.cpp \
	PhysicalLayerMonitorStates.cpp \
	PhysicalLayerStates.cpp \
	PhysLoopback.cpp \
	ProtocolUtil.cpp \
	QualityConverter.cpp \
	RandomizedBuffer.cpp \
	ShiftableBuffer.cpp \
	SimpleDataObserver.cpp \
	SubjectBase.cpp \
	Threadable.cpp \
	Thread.cpp \
	TimerASIO.cpp \
	TimeSource.cpp \
	ToHex.cpp \
	TrackingTaskGroup.cpp \
	Util.cpp


